--- a/css/styles.css
+++ b/css/styles.css
@@ -314,7 +314,7 @@ p {
 /* Media query for small screens */
 @media (max-width: 600px) {
     #profile_pic {
-        width: 50%;
+        width: 250px;
         margin-left: auto;
         margin-right: auto;
         border: 2px solid white;
